Update and rename Bestellformular.html to index.html

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
-<strong>Bezeichnung:</strong> Shirt, classic, verspielter Ärmel<br>
-<img src='https://assets.ullapopken.de/images/products/829656750.jpg' alt='Shirt, classic, verspielter Ärmel'><br>
-<label>Menge:</label> <input type='number' name='Shirt, classic, verspielter Ärmel' min='0'><br>
+<strong>Bezeichnung:</strong> Shirt, classic, verspielter Ã„rmel<br>
+<img src='https://assets.ullapopken.de/images/products/829656750.jpg' alt='Shirt, classic, verspielter Ã„rmel'><br>
+<label>Menge:</label> <input type='number' name='Shirt, classic, verspielter Ã„rmel' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
