--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Filialbestellung</h1>
-<form method='POST' action='https://formsubmit.co/cgrimmert.popken@gmail.com'>
+<form method='POST' action='https://formsubmit.co/3080c87694b454ca3fb500ee360b3466'>
 <input type='hidden' name='_captcha' value='false'>
 <input type='hidden' name='_next' value='https://danke.de'>
 <label for='filiale'>Filialnummer:</label><br>
