--- a/index.html
+++ b/index.html
@@ -13,104 +13,103 @@
 <h1>Filialbestellung</h1>
 <form method='POST' action='https://formsubmit.co/3080c87694b454ca3fb500ee360b3466'>
 <input type='hidden' name='_captcha' value='false'>
-<input type='hidden' name='_next' value='https://danke.de'>
 <label for='filiale'>Filialnummer:</label><br>
 <input type='text' id='filiale' name='Filialnummer' required><br><br>
 <div class='artikel'>
 <strong>Team:</strong> Modern View<br>
 <strong>Bezeichnung:</strong> T-Shirt<br>
 <img src='https://assets.ullapopken.de/images/products/819237100.jpg' alt='T-Shirt'><br>
-<label>Menge:</label> <input type='number' name='T-Shirt' min='0'><br>
+<label>Menge:</label> <input type='number' name='819237100' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Modern View<br>
 <strong>Bezeichnung:</strong> Plisseerock Batic Druck<br>
 <img src='https://assets.ullapopken.de/images/products/830387770.jpg' alt='Plisseerock Batic Druck'><br>
-<label>Menge:</label> <input type='number' name='Plisseerock Batic Druck' min='0'><br>
+<label>Menge:</label> <input type='number' name='830387770' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> Tunika<br>
 <img src='https://assets.ullapopken.de/images/products/818719150.jpg' alt='Tunika'><br>
-<label>Menge:</label> <input type='number' name='Tunika' min='0'><br>
+<label>Menge:</label> <input type='number' name='818719150' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> Lyocell-Kleid<br>
 <img src='https://assets.ullapopken.de/images/products/821513902.jpg' alt='Lyocell-Kleid'><br>
-<label>Menge:</label> <input type='number' name='Lyocell-Kleid' min='0'><br>
+<label>Menge:</label> <input type='number' name='821513902' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> T-Shirt mit Herzausschnitt, bedruckt<br>
 <img src='https://assets.ullapopken.de/images/products/827004100.jpg' alt='T-Shirt mit Herzausschnitt, bedruckt'><br>
-<label>Menge:</label> <input type='number' name='T-Shirt mit Herzausschnitt, bedruckt' min='0'><br>
+<label>Menge:</label> <input type='number' name='827004100' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong>  T-Shirt mit floralem Druck, Classic<br>
 <img src='https://assets.ullapopken.de/images/products/828333110.jpg' alt=' T-Shirt mit floralem Druck, Classic'><br>
-<label>Menge:</label> <input type='number' name=' T-Shirt mit floralem Druck, Classic' min='0'><br>
+<label>Menge:</label> <input type='number' name='828333110' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> Lange Bermuda Mandy mit Palmen<br>
 <img src='https://assets.ullapopken.de/images/products/829227902.jpg' alt='Lange Bermuda Mandy mit Palmen'><br>
-<label>Menge:</label> <input type='number' name='Lange Bermuda Mandy mit Palmen' min='0'><br>
+<label>Menge:</label> <input type='number' name='829227902' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> Shirt, classic, verspielter Ärmel<br>
 <img src='https://assets.ullapopken.de/images/products/829656750.jpg' alt='Shirt, classic, verspielter Ärmel'><br>
-<label>Menge:</label> <input type='number' name='Shirt, classic, verspielter Ärmel' min='0'><br>
+<label>Menge:</label> <input type='number' name='829656750' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> Kleid mit besonderem Saum<br>
 <img src='https://assets.ullapopken.de/images/products/830247740.jpg' alt='Kleid mit besonderem Saum'><br>
-<label>Menge:</label> <input type='number' name='Kleid mit besonderem Saum' min='0'><br>
+<label>Menge:</label> <input type='number' name='830247740' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> Shorts mit aufgesetzten Taschen<br>
 <img src='https://assets.ullapopken.de/images/products/830260740.jpg' alt='Shorts mit aufgesetzten Taschen'><br>
-<label>Menge:</label> <input type='number' name='Shorts mit aufgesetzten Taschen' min='0'><br>
+<label>Menge:</label> <input type='number' name='830260740' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Casual<br>
 <strong>Bezeichnung:</strong> Bluse mit Kaputze<br>
 <img src='https://assets.ullapopken.de/images/products/830264740.jpg' alt='Bluse mit Kaputze'><br>
-<label>Menge:</label> <input type='number' name='Bluse mit Kaputze' min='0'><br>
+<label>Menge:</label> <input type='number' name='830264740' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Basic<br>
 <strong>Bezeichnung:</strong> Top Carree-Neck<br>
 <img src='https://assets.ullapopken.de/images/products/807294740.jpg' alt='Top Carree-Neck'><br>
-<label>Menge:</label> <input type='number' name='Top Carree-Neck' min='0'><br>
+<label>Menge:</label> <input type='number' name='807294740' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Basic<br>
 <strong>Bezeichnung:</strong> Top Carree-Neck<br>
 <img src='https://assets.ullapopken.de/images/products/807294744.jpg' alt='Top Carree-Neck'><br>
-<label>Menge:</label> <input type='number' name='Top Carree-Neck' min='0'><br>
+<label>Menge:</label> <input type='number' name='807294744' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Basic<br>
 <strong>Bezeichnung:</strong> Top Carree-Neck<br>
 <img src='https://assets.ullapopken.de/images/products/807294815.jpg' alt='Top Carree-Neck'><br>
-<label>Menge:</label> <input type='number' name='Top Carree-Neck' min='0'><br>
+<label>Menge:</label> <input type='number' name='807294815' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Sport<br>
 <strong>Bezeichnung:</strong> Badekleid, Lola, Makramee palmen<br>
 <img src='https://assets.ullapopken.de/images/products/826482654.jpg' alt='Badekleid, Lola, Makramee palmen'><br>
-<label>Menge:</label> <input type='number' name='Badekleid, Lola, Makramee palmen' min='0'><br>
+<label>Menge:</label> <input type='number' name='826482654' min='0'><br>
 </div>
 <div class='artikel'>
 <strong>Team:</strong> Sport<br>
 <strong>Bezeichnung:</strong> Tankini, Rebecca, Zitronenombre<br>
 <img src='https://assets.ullapopken.de/images/products/826541100.jpg' alt='Tankini, Rebecca, Zitronenombre'><br>
-<label>Menge:</label> <input type='number' name='Tankini, Rebecca, Zitronenombre' min='0'><br>
+<label>Menge:</label> <input type='number' name='826541100' min='0'><br>
 </div>
 <button type='submit'>Bestellung absenden</button>
 </form>
