--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='de'>
 <head>
     <meta charset='UTF-8'>
-    <title>Filialbestellung</title>
+    <title>Filialbestellung test2</title>
     <style>
         body { font-family: Arial; margin: 20px; }
         img { max-height: 100px; }
@@ -13,9 +13,9 @@
 <h1>Filialbestellung</h1>
 <form method='POST' action='https://formsubmit.co/3080c87694b454ca3fb500ee360b3466'>
 <input type='hidden' name='_captcha' value='false'>
-<input type='hidden' name='_next' value='https://cgripopken.github.io/thankyou.html'>
+<input type='hidden' name='_next' value='https://cgripopken.github.io/Filialbestellung/thankyou.html'>
 <label for='filiale'>Filialnummer:</label><br>
-<input type='text' id='filiale' name='Filialnummer' required><br><br>
+<input type='number' id='filiale' name='Filialnummer' required><br><br>
 <div class='artikel'>
 <strong>Team:</strong> Modern View<br>
 <strong>Bezeichnung:</strong> T-Shirt<br>
