--- a/index.html
+++ b/index.html
@@ -18,100 +18,116 @@
 <label for='filiale'>Filialnummer:</label><br>
 <input type='text' id='filiale' name='Filialnummer' required><br><br>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> modern view<br>
-<strong>Team:</strong> T-Shirt<br>
+<strong>Artikelnummer:</strong> 819237100<br>
+<strong>Team:</strong> modern view<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/819237100.jpg<br>
-<label>Menge:</label> <input type='number' name='modern view' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/819237100.jpg' alt='https://assets.ullapopken.de/images/products/819237100.jpg'><br>
+<label>Menge:</label> <input type='number' name='819237100' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> modern view<br>
-<strong>Team:</strong> Plisseerock Batic Druck<br>
+<strong>Artikelnummer:</strong> 830387770<br>
+<strong>Team:</strong> modern view<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/830387770.jpg<br>
-<label>Menge:</label> <input type='number' name='modern view' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/830387770.jpg' alt='https://assets.ullapopken.de/images/products/830387770.jpg'><br>
+<label>Menge:</label> <input type='number' name='830387770' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> Tunika<br>
+<strong>Artikelnummer:</strong> 818719150<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/818719150.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/818719150.jpg' alt='https://assets.ullapopken.de/images/products/818719150.jpg'><br>
+<label>Menge:</label> <input type='number' name='818719150' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> Lyocell-Kleid<br>
+<strong>Artikelnummer:</strong> 821513902<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/821513902.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/821513902.jpg' alt='https://assets.ullapopken.de/images/products/821513902.jpg'><br>
+<label>Menge:</label> <input type='number' name='821513902' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> T-Shirt mit Herzausschnitt, bedruckt<br>
+<strong>Artikelnummer:</strong> 827004100<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/827004100.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/827004100.jpg' alt='https://assets.ullapopken.de/images/products/827004100.jpg'><br>
+<label>Menge:</label> <input type='number' name='827004100' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong>  T-Shirt mit floralem Druck, Classic<br>
+<strong>Artikelnummer:</strong> 828333110<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/828333110.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/828333110.jpg' alt='https://assets.ullapopken.de/images/products/828333110.jpg'><br>
+<label>Menge:</label> <input type='number' name='828333110' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> Lange Bermuda Mandy mit Palmen<br>
+<strong>Artikelnummer:</strong> 829227902<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/829227902.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/829227902.jpg' alt='https://assets.ullapopken.de/images/products/829227902.jpg'><br>
+<label>Menge:</label> <input type='number' name='829227902' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> Shirt, classic, verspielter Ärmel<br>
+<strong>Artikelnummer:</strong> 829656750<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/829656750.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/829656750.jpg' alt='https://assets.ullapopken.de/images/products/829656750.jpg'><br>
+<label>Menge:</label> <input type='number' name='829656750' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> Kleid mit besonderem Saum<br>
+<strong>Artikelnummer:</strong> 830247740<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/830247740.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/830247740.jpg' alt='https://assets.ullapopken.de/images/products/830247740.jpg'><br>
+<label>Menge:</label> <input type='number' name='830247740' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> Shorts mit aufgesetzten Taschen<br>
+<strong>Artikelnummer:</strong> 830260740<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/830260740.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/830260740.jpg' alt='https://assets.ullapopken.de/images/products/830260740.jpg'><br>
+<label>Menge:</label> <input type='number' name='830260740' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> CASUAL<br>
-<strong>Team:</strong> Bluse mit Kaputze<br>
+<strong>Artikelnummer:</strong> 830264740<br>
+<strong>Team:</strong> CASUAL<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/830264740.jpg<br>
-<label>Menge:</label> <input type='number' name='CASUAL' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/830264740.jpg' alt='https://assets.ullapopken.de/images/products/830264740.jpg'><br>
+<label>Menge:</label> <input type='number' name='830264740' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> Basics<br>
-<strong>Team:</strong> Top Carree-Neck<br>
+<strong>Artikelnummer:</strong> 807294740<br>
+<strong>Team:</strong> Basics<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/807294740.jpg<br>
-<label>Menge:</label> <input type='number' name='Basics' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/807294740.jpg' alt='https://assets.ullapopken.de/images/products/807294740.jpg'><br>
+<label>Menge:</label> <input type='number' name='807294740' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> Basics<br>
-<strong>Team:</strong> Top Carree-Neck<br>
+<strong>Artikelnummer:</strong> 807294744<br>
+<strong>Team:</strong> Basics<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/807294744.jpg<br>
-<label>Menge:</label> <input type='number' name='Basics' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/807294744.jpg' alt='https://assets.ullapopken.de/images/products/807294744.jpg'><br>
+<label>Menge:</label> <input type='number' name='807294744' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> Basics<br>
-<strong>Team:</strong> Top Carree-Neck<br>
+<strong>Artikelnummer:</strong> 807294815<br>
+<strong>Team:</strong> Basics<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/807294815.jpg<br>
-<label>Menge:</label> <input type='number' name='Basics' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/807294815.jpg' alt='https://assets.ullapopken.de/images/products/807294815.jpg'><br>
+<label>Menge:</label> <input type='number' name='807294815' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> UP Sport<br>
-<strong>Team:</strong> Badekleid, Lola, Makramee palmen<br>
+<strong>Artikelnummer:</strong> 826482654<br>
+<strong>Team:</strong> UP Sport<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/826482654.jpg<br>
-<label>Menge:</label> <input type='number' name='UP Sport' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/826482654.jpg' alt='https://assets.ullapopken.de/images/products/826482654.jpg'><br>
+<label>Menge:</label> <input type='number' name='826482654' min='0'><br>
 </div>
 <div class='artikel'>
-<strong>Artikelnummer:</strong> UP Sport<br>
-<strong>Team:</strong> Tankini, Rebecca, Zitronenombre<br>
+<strong>Artikelnummer:</strong> 826541100<br>
+<strong>Team:</strong> UP Sport<br>
 <strong>Bezeichnung:</strong> https://assets.ullapopken.de/images/products/826541100.jpg<br>
-<label>Menge:</label> <input type='number' name='UP Sport' min='0'><br>
+<img src='https://assets.ullapopken.de/images/products/826541100.jpg' alt='https://assets.ullapopken.de/images/products/826541100.jpg'><br>
+<label>Menge:</label> <input type='number' name='826541100' min='0'><br>
 </div>
 <button type='submit'>Bestellung absenden</button>
 </form>
