--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang='de'>
 <head>
     <meta charset='UTF-8'>
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-<h1>Nachbestellung für Filialen</h1>
+<h1>Nachbestellung fÃ¼r Filialen</h1>
 <img src='https://assets.kununu.com/media/prod/profiles/logos/1a14eb74-0eb5-42ea-98ef-25c1c4e9d951_1_66043190c3cf9.gif' alt='Logo'><br><br><br>
 <form method='POST' action='https://formsubmit.co/3080c87694b454ca3fb500ee360b3466'>
 <input type='hidden' name='_captcha' value='false'>
@@ -69,8 +69,8 @@
 <div class='artikel'>
 <strong>Artikelnummer:</strong> 829656750<br>
 <strong>Team:</strong> CASUAL<br>
-<strong>Bezeichnung:</strong> Shirt, classic, verspielter Ärmel<br>
-<img src='https://assets.ullapopken.de/images/products/829656750.jpg' alt='Shirt, classic, verspielter Ärmel'><br>
+<strong>Bezeichnung:</strong> Shirt, classic, verspielter Ã„rmel<br>
+<img src='https://assets.ullapopken.de/images/products/829656750.jpg' alt='Shirt, classic, verspielter Ã„rmel'><br>
 <label>Menge:</label> <input type='number' name='829656750' min='0'><br>
 </div>
 <div class='artikel'>
